fix white space bug

--- a/src/styles/components/progress.scss
+++ b/src/styles/components/progress.scss
@@ -9,6 +9,7 @@ body:before {
   position: fixed;
   top: 0;
   transition: 500ms width;
+  z-index: 3;
   width: 0%;
 }
 
